seaqt/QtGui/gen_qtextcursor.nim


proc fcQTextCursor_operatorAssign(self: pointer, other: pointer): void {.importc: "QTextCursor_operatorAssign".}
proc fcQTextCursor_swap(self: pointer, other: pointer): void {.importc: "QTextCursor_swap".}
proc fcQTextCursor_isNull(self: pointer, ): bool {.importc: "QTextCursor_isNull".}
proc fcQTextCursor_setPosition(self: pointer, pos: cint): void {.importc: "QTextCursor_setPosition".}
proc fcQTextCursor_position(self: pointer, ): cint {.importc: "QTextCursor_position".}
proc fcQTextCursor_positionInBlock(self: pointer, ): cint {.importc: "QTextCursor_positionInBlock".}
proc fcQTextCursor_anchor(self: pointer, ): cint {.importc: "QTextCursor_anchor".}
proc fcQTextCursor_insertText(self: pointer, text: struct_miqt_string): void {.importc: "QTextCursor_insertText".}
proc fcQTextCursor_insertText2(self: pointer, text: struct_miqt_string, format: pointer): void {.importc: "QTextCursor_insertText2".}
proc fcQTextCursor_movePosition(self: pointer, op: cint): bool {.importc: "QTextCursor_movePosition".}
proc fcQTextCursor_visualNavigation(self: pointer, ): bool {.importc: "QTextCursor_visualNavigation".}
proc fcQTextCursor_setVisualNavigation(self: pointer, b: bool): void {.importc: "QTextCursor_setVisualNavigation".}
proc fcQTextCursor_setVerticalMovementX(self: pointer, x: cint): void {.importc: "QTextCursor_setVerticalMovementX".}
proc fcQTextCursor_verticalMovementX(self: pointer, ): cint {.importc: "QTextCursor_verticalMovementX".}
proc fcQTextCursor_setKeepPositionOnInsert(self: pointer, b: bool): void {.importc: "QTextCursor_setKeepPositionOnInsert".}
proc fcQTextCursor_keepPositionOnInsert(self: pointer, ): bool {.importc: "QTextCursor_keepPositionOnInsert".}
proc fcQTextCursor_deleteChar(self: pointer, ): void {.importc: "QTextCursor_deleteChar".}
proc fcQTextCursor_deletePreviousChar(self: pointer, ): void {.importc: "QTextCursor_deletePreviousChar".}
proc fcQTextCursor_select(self: pointer, selection: cint): void {.importc: "QTextCursor_select".}
proc fcQTextCursor_hasSelection(self: pointer, ): bool {.importc: "QTextCursor_hasSelection".}
proc fcQTextCursor_hasComplexSelection(self: pointer, ): bool {.importc: "QTextCursor_hasComplexSelection".}
proc fcQTextCursor_removeSelectedText(self: pointer, ): void {.importc: "QTextCursor_removeSelectedText".}
proc fcQTextCursor_clearSelection(self: pointer, ): void {.importc: "QTextCursor_clearSelection".}
proc fcQTextCursor_selectionStart(self: pointer, ): cint {.importc: "QTextCursor_selectionStart".}
proc fcQTextCursor_selectionEnd(self: pointer, ): cint {.importc: "QTextCursor_selectionEnd".}
proc fcQTextCursor_selectedText(self: pointer, ): struct_miqt_string {.importc: "QTextCursor_selectedText".}
proc fcQTextCursor_selection(self: pointer, ): pointer {.importc: "QTextCursor_selection".}
proc fcQTextCursor_selectedTableCells(self: pointer, firstRow: ptr cint, numRows: ptr cint, firstColumn: ptr cint, numColumns: ptr cint): void {.importc: "QTextCursor_selectedTableCells".}
proc fcQTextCursor_blockX(self: pointer, ): pointer {.importc: "QTextCursor_block".}
proc fcQTextCursor_charFormat(self: pointer, ): pointer {.importc: "QTextCursor_charFormat".}
proc fcQTextCursor_setCharFormat(self: pointer, format: pointer): void {.importc: "QTextCursor_setCharFormat".}
proc fcQTextCursor_mergeCharFormat(self: pointer, modifier: pointer): void {.importc: "QTextCursor_mergeCharFormat".}
proc fcQTextCursor_blockFormat(self: pointer, ): pointer {.importc: "QTextCursor_blockFormat".}
proc fcQTextCursor_setBlockFormat(self: pointer, format: pointer): void {.importc: "QTextCursor_setBlockFormat".}
proc fcQTextCursor_mergeBlockFormat(self: pointer, modifier: pointer): void {.importc: "QTextCursor_mergeBlockFormat".}
proc fcQTextCursor_blockCharFormat(self: pointer, ): pointer {.importc: "QTextCursor_blockCharFormat".}
proc fcQTextCursor_setBlockCharFormat(self: pointer, format: pointer): void {.importc: "QTextCursor_setBlockCharFormat".}
proc fcQTextCursor_mergeBlockCharFormat(self: pointer, modifier: pointer): void {.importc: "QTextCursor_mergeBlockCharFormat".}
proc fcQTextCursor_atBlockStart(self: pointer, ): bool {.importc: "QTextCursor_atBlockStart".}
proc fcQTextCursor_atBlockEnd(self: pointer, ): bool {.importc: "QTextCursor_atBlockEnd".}
proc fcQTextCursor_atStart(self: pointer, ): bool {.importc: "QTextCursor_atStart".}
proc fcQTextCursor_atEnd(self: pointer, ): bool {.importc: "QTextCursor_atEnd".}
proc fcQTextCursor_insertBlock(self: pointer, ): void {.importc: "QTextCursor_insertBlock".}
proc fcQTextCursor_insertBlockWithFormat(self: pointer, format: pointer): void {.importc: "QTextCursor_insertBlockWithFormat".}
proc fcQTextCursor_insertBlock2(self: pointer, format: pointer, charFormat: pointer): void {.importc: "QTextCursor_insertBlock2".}
proc fcQTextCursor_insertList(self: pointer, format: pointer): pointer {.importc: "QTextCursor_insertList".}
proc fcQTextCursor_insertListWithStyle(self: pointer, style: cint): pointer {.importc: "QTextCursor_insertListWithStyle".}
proc fcQTextCursor_createList(self: pointer, format: pointer): pointer {.importc: "QTextCursor_createList".}
proc fcQTextCursor_createListWithStyle(self: pointer, style: cint): pointer {.importc: "QTextCursor_createListWithStyle".}
proc fcQTextCursor_currentList(self: pointer, ): pointer {.importc: "QTextCursor_currentList".}
proc fcQTextCursor_insertTable(self: pointer, rows: cint, cols: cint, format: pointer): pointer {.importc: "QTextCursor_insertTable".}
proc fcQTextCursor_insertTable2(self: pointer, rows: cint, cols: cint): pointer {.importc: "QTextCursor_insertTable2".}
proc fcQTextCursor_currentTable(self: pointer, ): pointer {.importc: "QTextCursor_currentTable".}
proc fcQTextCursor_insertFrame(self: pointer, format: pointer): pointer {.importc: "QTextCursor_insertFrame".}
proc fcQTextCursor_currentFrame(self: pointer, ): pointer {.importc: "QTextCursor_currentFrame".}
proc fcQTextCursor_insertFragment(self: pointer, fragment: pointer): void {.importc: "QTextCursor_insertFragment".}
proc fcQTextCursor_insertHtml(self: pointer, html: struct_miqt_string): void {.importc: "QTextCursor_insertHtml".}
proc fcQTextCursor_insertImage(self: pointer, format: pointer, alignment: cint): void {.importc: "QTextCursor_insertImage".}
proc fcQTextCursor_insertImageWithFormat(self: pointer, format: pointer): void {.importc: "QTextCursor_insertImageWithFormat".}
proc fcQTextCursor_insertImageWithName(self: pointer, name: struct_miqt_string): void {.importc: "QTextCursor_insertImageWithName".}
proc fcQTextCursor_insertImageWithImage(self: pointer, image: pointer): void {.importc: "QTextCursor_insertImageWithImage".}
proc fcQTextCursor_beginEditBlock(self: pointer, ): void {.importc: "QTextCursor_beginEditBlock".}
proc fcQTextCursor_joinPreviousEditBlock(self: pointer, ): void {.importc: "QTextCursor_joinPreviousEditBlock".}
proc fcQTextCursor_endEditBlock(self: pointer, ): void {.importc: "QTextCursor_endEditBlock".}
proc fcQTextCursor_operatorNotEqual(self: pointer, rhs: pointer): bool {.importc: "QTextCursor_operatorNotEqual".}
proc fcQTextCursor_operatorLesser(self: pointer, rhs: pointer): bool {.importc: "QTextCursor_operatorLesser".}
proc fcQTextCursor_operatorLesserOrEqual(self: pointer, rhs: pointer): bool {.importc: "QTextCursor_operatorLesserOrEqual".}
proc fcQTextCursor_operatorEqual(self: pointer, rhs: pointer): bool {.importc: "QTextCursor_operatorEqual".}
proc fcQTextCursor_operatorGreaterOrEqual(self: pointer, rhs: pointer): bool {.importc: "QTextCursor_operatorGreaterOrEqual".}
proc fcQTextCursor_operatorGreater(self: pointer, rhs: pointer): bool {.importc: "QTextCursor_operatorGreater".}
proc fcQTextCursor_isCopyOf(self: pointer, other: pointer): bool {.importc: "QTextCursor_isCopyOf".}
proc fcQTextCursor_blockNumber(self: pointer, ): cint {.importc: "QTextCursor_blockNumber".}
proc fcQTextCursor_columnNumber(self: pointer, ): cint {.importc: "QTextCursor_columnNumber".}
proc fcQTextCursor_document(self: pointer, ): pointer {.importc: "QTextCursor_document".}
proc fcQTextCursor_setPosition2(self: pointer, pos: cint, mode: cint): void {.importc: "QTextCursor_setPosition2".}
proc fcQTextCursor_movePosition2(self: pointer, op: cint, param2: cint): bool {.importc: "QTextCursor_movePosition2".}
proc fcQTextCursor_movePosition3(self: pointer, op: cint, param2: cint, n: cint): bool {.importc: "QTextCursor_movePosition3".}
proc fcQTextCursor_insertImage2(self: pointer, image: pointer, name: struct_miqt_string): void {.importc: "QTextCursor_insertImage2".}
proc fcQTextCursor_new(): ptr cQTextCursor {.importc: "QTextCursor_new".}
proc fcQTextCursor_new2(document: pointer): ptr cQTextCursor {.importc: "QTextCursor_new2".}
proc fcQTextCursor_new3(frame: pointer): ptr cQTextCursor {.importc: "QTextCursor_new3".}
proc fcQTextCursor_new4(blockVal: pointer): ptr cQTextCursor {.importc: "QTextCursor_new4".}
proc fcQTextCursor_new5(cursor: pointer): ptr cQTextCursor {.importc: "QTextCursor_new5".}
proc fcQTextCursor_delete(self: pointer) {.importc: "QTextCursor_delete".}

proc operatorAssign*(self: gen_qtextcursor_types.QTextCursor, other: gen_qtextcursor_types.QTextCursor): void =
  fcQTextCursor_operatorAssign(self.h, other.h)

proc swap*(self: gen_qtextcursor_types.QTextCursor, other: gen_qtextcursor_types.QTextCursor): void =
  fcQTextCursor_swap(self.h, other.h)

proc isNull*(self: gen_qtextcursor_types.QTextCursor, ): bool =
  fcQTextCursor_isNull(self.h)

proc setPosition*(self: gen_qtextcursor_types.QTextCursor, pos: cint): void =
  fcQTextCursor_setPosition(self.h, pos)

proc position*(self: gen_qtextcursor_types.QTextCursor, ): cint =
  fcQTextCursor_position(self.h)

proc positionInBlock*(self: gen_qtextcursor_types.QTextCursor, ): cint =
  fcQTextCursor_positionInBlock(self.h)

proc anchor*(self: gen_qtextcursor_types.QTextCursor, ): cint =
  fcQTextCursor_anchor(self.h)

proc insertText*(self: gen_qtextcursor_types.QTextCursor, text: string): void =
  fcQTextCursor_insertText(self.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc insertText*(self: gen_qtextcursor_types.QTextCursor, text: string, format: gen_qtextformat_types.QTextCharFormat): void =
  fcQTextCursor_insertText2(self.h, struct_miqt_string(data: text, len: csize_t(len(text))), format.h)

proc movePosition*(self: gen_qtextcursor_types.QTextCursor, op: cint): bool =
  fcQTextCursor_movePosition(self.h, cint(op))

proc visualNavigation*(self: gen_qtextcursor_types.QTextCursor, ): bool =
  fcQTextCursor_visualNavigation(self.h)

proc setVisualNavigation*(self: gen_qtextcursor_types.QTextCursor, b: bool): void =
  fcQTextCursor_setVisualNavigation(self.h, b)

proc setVerticalMovementX*(self: gen_qtextcursor_types.QTextCursor, x: cint): void =
  fcQTextCursor_setVerticalMovementX(self.h, x)

proc verticalMovementX*(self: gen_qtextcursor_types.QTextCursor, ): cint =
  fcQTextCursor_verticalMovementX(self.h)

proc setKeepPositionOnInsert*(self: gen_qtextcursor_types.QTextCursor, b: bool): void =
  fcQTextCursor_setKeepPositionOnInsert(self.h, b)

proc keepPositionOnInsert*(self: gen_qtextcursor_types.QTextCursor, ): bool =
  fcQTextCursor_keepPositionOnInsert(self.h)

proc deleteChar*(self: gen_qtextcursor_types.QTextCursor, ): void =
  fcQTextCursor_deleteChar(self.h)

proc deletePreviousChar*(self: gen_qtextcursor_types.QTextCursor, ): void =
  fcQTextCursor_deletePreviousChar(self.h)

proc select*(self: gen_qtextcursor_types.QTextCursor, selection: cint): void =
  fcQTextCursor_select(self.h, cint(selection))

proc hasSelection*(self: gen_qtextcursor_types.QTextCursor, ): bool =
  fcQTextCursor_hasSelection(self.h)

proc hasComplexSelection*(self: gen_qtextcursor_types.QTextCursor, ): bool =
  fcQTextCursor_hasComplexSelection(self.h)

proc removeSelectedText*(self: gen_qtextcursor_types.QTextCursor, ): void =
  fcQTextCursor_removeSelectedText(self.h)

proc clearSelection*(self: gen_qtextcursor_types.QTextCursor, ): void =
  fcQTextCursor_clearSelection(self.h)
